[package]
name = "pg_mapper"
description = "derive `TryFrom<tokio_postgres::Row>`"
authors = ["Maël Obréjan <mael.obrejan@protonmail.com>"]
license = "MIT"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/malobre/pg_mapper"
readme = "README.md"
keywords = ["postgres", "derive", "row"]
include = ["src/**/*", "Cargo.toml", "LICENSE"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = "1.0.86"

[dev-dependencies]
tokio-postgres = { version = "0.7.5", default-features = false }
trybuild = "1.0.55"
